# cadencia-platform

./: .gitignore  docker-compose.yml
cadencia-a2a-phases/: .dockerignore  .env.example  .gitignore  Caddyfile  Caddyfile.prod  Dockerfile  Dockerfile.dev  alembic.ini  audit_verification_report.md  cadencia_integration_audit.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
cadencia-a2a-phases/.github/: dependabot.yml
cadencia-a2a-phases/.github/workflows/: ci.yml  rollback.yml
cadencia-a2a-phases/alembic/: env.py
cadencia-a2a-phases/alembic/versions/: 001_initial_schema.py  002_settlement_phase2.py  003_compliance_phase3.py  004_compliance_rls.py  005_agent_memory.py  006_marketplace_phase3.py  ea191f1c2d48_add_llm_call_logs_and_broadcasts.py
cadencia-a2a-phases/artifacts/: CadenciaEscrow.approval.teal  CadenciaEscrow.clear.teal  CadenciaEscrowClient.py
cadencia-a2a-phases/contracts/: __init__.py  escrow_contract.py
cadencia-a2a-phases/docs/: CLAUDE.md  backend_status.md  cadencia-prd.md  cadencia-srs.md  cadencia-technical-alignment.md  context.md  prototype_rundown.md
cadencia-a2a-phases/infra/grafana/dashboards/: cadencia-compliance-audit.json  cadencia-infrastructure.json  cadencia-llm-operations.json  cadencia-negotiation-engine.json  cadencia-system-overview.json
cadencia-a2a-phases/infra/terraform/: main.tf  outputs.tf  variables.tf
cadencia-a2a-phases/scripts/: create_all_tables.sql  init_db.sql  migrate.py  seed_demo_data.py
cadencia-a2a-phases/src/admin/: __init__.py  models.py
cadencia-a2a-phases/src/admin/api/: __init__.py  router.py
cadencia-a2a-phases/src/admin/schemas/: __init__.py  admin_schemas.py
cadencia-a2a-phases/src/admin/services/: __init__.py  admin_service.py
cadencia-a2a-phases/src/compliance/api/: dependencies.py  router.py  schemas.py
cadencia-a2a-phases/src/compliance/application/: commands.py  queries.py  services.py
cadencia-a2a-phases/src/compliance/domain/: audit_log.py  fema_record.py  gst_record.py  ports.py  value_objects.py
cadencia-a2a-phases/src/compliance/infrastructure/: enterprise_reader.py  fema_gst_exporter.py  models.py  repositories.py
cadencia-a2a-phases/src/health/: router.py
cadencia-a2a-phases/src/identity/api/: dependencies.py  router.py  schemas.py
cadencia-a2a-phases/src/identity/application/: commands.py  queries.py  services.py
cadencia-a2a-phases/src/identity/domain/: enterprise.py  events.py  ports.py  user.py  value_objects.py
cadencia-a2a-phases/src/identity/infrastructure/: digilocker_kyc_adapter.py  jwt_service.py  kyc_adapter.py  models.py  repositories.py  wallet_verifier.py
cadencia-a2a-phases/src/marketplace/api/: __init__.py  router.py  schemas.py
cadencia-a2a-phases/src/marketplace/application/: __init__.py  commands.py  services.py
cadencia-a2a-phases/src/marketplace/domain/: __init__.py  capability_profile.py  events.py  match.py  ports.py  rfq.py  value_objects.py
cadencia-a2a-phases/src/marketplace/infrastructure/: models.py  pgvector_matchmaker.py  repositories.py  rfq_parser.py
cadencia-a2a-phases/src/negotiation/api/: dependencies.py  memory_router.py  router.py  schemas.py
cadencia-a2a-phases/src/negotiation/application/: commands.py  personalization_service.py  services.py
cadencia-a2a-phases/src/negotiation/domain/: agent_profile.py  events.py  guardrails.py  offer.py  opponent_model.py  playbook.py  policies.py  ports.py  session.py  strategy.py  valuation.py  value_objects.py
cadencia-a2a-phases/src/negotiation/infrastructure/: embedding_pipeline.py  llm_agent_driver.py  models.py  neutral_engine.py  personalization.py  repositories.py  s3_vault.py  sse_publisher.py
cadencia-a2a-phases/src/negotiation/migrations/: 005_opponent_model.sql  006_agent_memory.sql
cadencia-a2a-phases/src/settlement/api/: dependencies.py  router.py  schemas.py
cadencia-a2a-phases/src/settlement/application/: commands.py  queries.py  services.py
cadencia-a2a-phases/src/settlement/domain/: escrow.py  events.py  ports.py  settlement.py  value_objects.py
cadencia-a2a-phases/src/wallet/: __init__.py  schemas.py
cadencia-a2a-phases/tests/: conftest.py
cadencia-a2a-phases/tests/e2e/: __init__.py  test_escrow_lifecycle.py  test_full_trade_loop.py
cadencia-a2a-phases/tests/integration/: test_critical_flows.py  test_fx_adapter.py  test_health.py  test_identity_api.py
cadencia-a2a-phases/tests/performance/: test_load.py  test_pgvector_benchmark.py
cadencia-a2a-phases/tests/smoke/: __init__.py  test_production_smoke.py
final-frontend-cadencia/: .dockerignore  (+7 more)
(+191 files in other folders)
