[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadencia"
version = "0.1.0"
description = "AI-native agentic B2B trade marketplace for Indian MSMEs"
requires-python = ">=3.12"
dependencies = [
    # ── Web framework ────────────────────────────────────────────────────────
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",

    # ── Validation ───────────────────────────────────────────────────────────
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # ── Database ─────────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",                  # pgvector.sqlalchemy.Vector type

    # ── Cache ────────────────────────────────────────────────────────────────
    "redis[hiredis]>=5.0",

    # ── Logging ──────────────────────────────────────────────────────────────
    "structlog>=24.1",

    # ── Algorand ─────────────────────────────────────────────────────────────
    # context.md §5: algosdk 2.x + algokit-utils 4.x
    "py-algorand-sdk>=2.6",
    "algokit-utils>=4.0",

    # ── Auth ─────────────────────────────────────────────────────────────────
    # context.md §14: RS256-signed JWT; HS256 PROHIBITED
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "cryptography>=42.0",

    # ── HTTP client (health checks + external integrations) ──────────────────
    "httpx>=0.27",

    # ── Metrics ──────────────────────────────────────────────────────────────
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "anyio[trio]>=4.4",
    "httpx>=0.27",          # async test client
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "contracts*"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
# context.md §5 + §3: Ruff (E, F, I, TID252) — zero violations on every CI build.
# context.md §3: TID252 enforces hexagonal import boundaries.
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "TID252"]
ignore = [
    "E501",   # line too long — handled by formatter
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-tidy-imports.banned-module-imports]
# context.md §3 + §4: Cross-domain direct imports PROHIBITED.
# Communication ONLY via domain events (publisher.py).
"src.settlement" = { message = "Use domain events or shared ports — no direct settlement imports from other domains (context.md §3)" }
"src.negotiation" = { message = "Use domain events — no direct negotiation imports from other domains (context.md §3)" }
"src.compliance" = { message = "Use domain events or shared protocols — no direct compliance imports from other domains (context.md §3)" }

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["TID252"]          # tests may import any domain for assertions
"alembic/*" = ["TID252", "F401"] # migrations import all models

# ── Mypy ─────────────────────────────────────────────────────────────────────
# context.md §5 + §15: Mypy strict — zero errors on every CI build.
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
show_error_codes = true
exclude = [
    "alembic/",
    "artifacts/",
    "contracts/",
]

[[tool.mypy.overrides]]
module = [
    "algosdk.*",
    "algokit_utils.*",
    "pgvector.*",
    "redis.*",
    "structlog.*",
    "passlib.*",
    "jose.*",
    "prometheus_fastapi_instrumentator.*",
]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-q",
]
markers = [
    "unit: Pure unit tests with zero I/O",
    "integration: Tests requiring running services",
    "e2e: End-to-end tests on Algorand localnet",
]

# ── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "alembic/*", "scripts/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
